# severus

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  severus.py
severus/: __init__.py
severus/commands/: add.py  delete.py  edit.py  env.py  help.py  init.py  initialize.py  list.py  receive.py  search.py  share.py  show.py
severus/utils/: auth.py  config.py  encryption.py  helpers.py  info.py  sharing.py  totp.py  vault.py
